--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.8.0
+  firebase_auth: ^4.3.0
+  modal_progress_hud_nsn: ^0.3.0
+  cloud_firestore: ^4.4.5
 
 dev_dependencies:
   flutter_test:
@@ -78,6 +82,9 @@ flutter:
     - family: Pacifico
       fonts:
         - asset: assets/fonts/Pacifico-Regular.ttf
+    - family: Alkatra
+      fonts:
+        - asset: assets/fonts/Alkatra.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
