--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^4.3.0
   modal_progress_hud_nsn: ^0.3.0
   cloud_firestore: ^4.4.5
+  flutter_bloc: ^8.1.2
 
 dev_dependencies:
   flutter_test:
